--- a/index.html
+++ b/index.html
@@ -204,6 +204,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="Miicraft.png" alt="Miicraft Project">
+                </div>
+                <div class="project-content">
+                    <h3>Miicraft - Minecraft for Wii in C++</h3>
+                    <p>Unofficial port of Minecraft on Nintendo Wii using C++ and the Revolution GX library, adhering to strict hardware constraints.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/MissingNo42/MiiCraft" class="project-link">GitHub</a>
+                        <a href="Présentation_Miicraft.mp4" class="project-link">Presentation</a>
+                    </div>
+                </div>
+            </div>
             <div class="project-card">
                 <div class="project-image">
                     <img src="tetris.png" alt="Tetris Project">
@@ -214,19 +228,6 @@
                     <div class="project-links">
                         <a href="https://github.com/MissingNo42/Tetris" class="project-link">GitHub</a>
                         <a href="https://perso.isima.fr/~paquinzi/Tetris%20Galaxy/www/index.html" class="project-link">Archive website (Deprecated)</a>
-                    </div>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-image">
-                    <img src="miicraft.png" alt="Miicraft Project">
-                </div>
-                <div class="project-content">
-                    <h3>Miicraft - Minecraft for Wii in C++</h3>
-                    <p>Unofficial port of Minecraft on Nintendo Wii using C++ and the Revolution GX library, adhering to strict hardware constraints.</p>
-                    <div class="project-links">
-                        <a href="https://github.com/MissingNo42/MiiCraft" class="project-link">GitHub</a>
-                        <a href="Présentation_Miicraft.mp4" class="project-link">Presentation</a>
                     </div>
                 </div>
             </div>
