--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <p>Unofficial port of Minecraft on Nintendo Wii using C++ and the Revolution GX library, adhering to strict hardware constraints.</p>
                     <div class="project-links">
                         <a href="https://github.com/MissingNo42/MiiCraft" class="project-link">GitHub</a>
-                        <a href="Présentation_Miicraft.mp4" class="project-link">Presentation</a>
+                        <a href="https://youtu.be/wP0svs54ZcE" class="project-link">Presentation</a>
                     </div>
                 </div>
             </div>
