--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <p>Raise the bar and go beyond your limits</p>
                 </div>
                 <div class="interest-back">
-                    <video src="athletisme.mp4" autoplay muted loop></video>
+                    <video src="medias/videos/athletisme.mp4" autoplay muted loop></video>
                 </div>
             </div>
 
@@ -282,7 +282,7 @@
                     <p>Explore the world and its wonders</p>
                 </div>
                 <div class="interest-back">
-                    <video src="geographie.mp4" autoplay muted loop></video>
+                    <video src="medias/videos/geographie.mp4" autoplay muted loop></video>
                 </div>
             </div>
         </div>
