Add Sports data video

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <h3>Sports data aggregation website</h3>
                     <p>Python website project using large scale scraping and API requests to gather and display rugby data. </p>
                     <div class="project-links">
-                        <a href="Final_Presentation_Trinity_Paul_Quinzi.mp4" class="project-link">Presentation</a>
+                        <a href="https://youtu.be/zmu_kmhmWwM" class="project-link">Presentation</a>
                     </div>
                 </div>
             </div>
