--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
             learnMore: "Learn More About Me",
             aboutMe: "About Me",
             hello: "Hello! I’m a Computer Science and Modeling Engineer",
-            aboutP1: "I’m passionate about software development, algorithms, and problem-solving. With experience ranging from video game design to embedded systems, I enjoy transforming complex ideas into reliable, efficient, and creative solutions.",
-            aboutP2: "My journey has taken me through a variety of projects: developing an official Tetris game, creating a Minecraft port on Wii under strict constraints, and building a sports database web application during an international internship at Trinity College Dublin. Currently, I’m applying my skills at Michelin, where I work on predictive maintenance algorithms in embedded systems.",
-            aboutP3: "Beyond coding, I enjoy exploring fields like machine learning, optimization, and 3D modeling. I also cultivate personal passions in music, athletics, and geography, which keep me curious, disciplined, and creative in both work and life.",
+            aboutP1: "I am passionate about software development, algorithms, and problem-solving. With experience ranging from database design and maintenance to embedded systems and video game development, I enjoy turning complex ideas into reliable, efficient, and creative solutions.",
+            aboutP2: "My journey has taken me through diverse projects: designing video games under tight constraints, building a geopolitical simulator, and developing a sports database web application during an international internship at Trinity College Dublin. More recently, I applied my skills at Michelin, where I contributed to predictive maintenance algorithms for embedded systems.",
+            aboutP3: "Beyond coding, I am deeply interested in fields such as machine learning, optimization, and 3D modeling. I also pursue personal passions in music, athletics, and general knowledge — especially geography — which nurture my curiosity, discipline, and creativity both at work and in life.",
             mySkills: "My Skills",
             softSkills: "Soft Skills",
             teamwork: "Teamwork",
@@ -474,13 +474,13 @@
             interests: "Centres d’intérêt",
             contact: "Contact",
             welcome: "Bienvenue sur mon Portfolio",
-            subtitle: "Ingénieur en informatique et modélisation | Du code à la stratégie, en dirigeant des équipes et reliant les domaines",
+            subtitle: "Ingénieur en informatique et modélisation | De l’analyse technique à la décision stratégique, au service de la performance collective",
             learnMore: "En savoir plus sur moi",
             aboutMe: "À propos de moi",
             hello: "Bonjour ! Je suis ingénieur en informatique et modélisation",
-            aboutP1: "Je suis passionné par le développement logiciel, les algorithmes et la résolution de problèmes. Avec une expérience allant de la conception de jeux vidéo aux systèmes embarqués, j’aime transformer des idées complexes en solutions fiables, efficaces et créatives.",
-            aboutP2: "Mon parcours m’a conduit à divers projets : développement d’un jeu Tetris officiel, portage de Minecraft sur Wii avec des contraintes strictes, et création d’une application web de base de données sportive lors d’un stage international au Trinity College Dublin. Actuellement, j’applique mes compétences chez Michelin, où je travaille sur des algorithmes de maintenance prédictive en systèmes embarqués.",
-            aboutP3: "Au-delà du code, j’aime explorer des domaines comme l’apprentissage automatique, l’optimisation et la modélisation 3D. Je cultive aussi des passions personnelles dans la musique, l’athlétisme et la géographie, qui me gardent curieux, discipliné et créatif aussi bien au travail que dans la vie.",
+            aboutP1: "Je suis passionné par le développement logiciel, les algorithmes et la résolution de problèmes. Fort d’expériences allant de la conception et la maintenance de bases de données aux systèmes embarqués et à la conception de jeux vidéo, j’aime transformer des idées complexes en solutions fiables, performantes et créatives.",
+            aboutP2: "Mon parcours m’a conduit à participer à des projets variés : développement de jeux vidéo contraints dès leur conception, création d’un simulateur géopolitique, ou encore réalisation d’une application web de gestion de bases de données sportives lors d’un stage international au Trinity College de Dublin. Plus récemment, j’ai mis mes compétences au service de Michelin, où j’ai travaillé sur des algorithmes de maintenance prédictive appliqués sur des systèmes embarqués.",
+            aboutP3: "Au-delà du code, je m’intéresse à des domaines tels que les systèmes experts, l’optimisation et la modélisation 3D. Je nourris également des passions personnelles pour la musique, le sport et la culture générale — notamment la géographie — qui développent ma curiosité, ma discipline et ma créativité, tant dans ma vie professionnelle que personnelle.",
             mySkills: "Mes Compétences",
             softSkills: "Compétences interpersonnelles",
             teamwork: "Travail d’équipe",
