--- a/index.html
+++ b/index.html
@@ -255,6 +255,15 @@
                     </div>
                 </div>
             </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="bomberman.png" alt="Bomberman">
+                </div>
+                <div class="project-content">
+                    <h3>Bomberman - Rules based IA</h3>
+                    <p>Game and AI development through learning in a rules-based system involving research on a graph theory problem.</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -450,6 +459,8 @@
             project5Title: "Cardamon - TCG collection manager",
             project5Desc: "C# project using Blazor framework to manage TCG card collections ( Pokémon in that case ).",
             project1Desc: "Python website project using large scale scraping and API requests to gather and display rugby data.",
+            project6Title: "Bomberman - Rules based IA",
+            project6Desc: "Game and AI development through learning in a rules-based system involving research on a graph theory problem.",
             liveDemo: "Archive website (Deprecated)",
             github: "GitHub",
             presentation: "Presentation",
@@ -508,6 +519,8 @@
             project1Desc: "Projet de site web en Python utilisant le scraping à grande échelle et des requêtes API pour collecter et afficher des données de rugby.",
             project5Title: "Cardamon - Gestionnaire de collection de cartes",
             project5Desc: "Projet en C# utilisant le framework Blazor pour gérer des collections de cartes (Pokémon dans ce cas).",
+            project6Title: "Bomberman - IA basée sur des règles",
+            project6Desc: "Développement d’un jeu et d’une Intelligence artificielle par apprentissage dans un système à base de règles impliquant des recherches sur un problème de théorie des graphes",
             liveDemo: "Archive web (Obsolète)",
             github: "GitHub",
             presentation: "Présentation",
