--- a/index.html
+++ b/index.html
@@ -593,12 +593,14 @@
         projectTitles[2].textContent = translations[lang].project3Title;
         projectTitles[3].textContent = translations[lang].project4Title;
         projectTitles[4].textContent = translations[lang].project5Title;
+        projectTitles[5].textContent = translations[lang].project6Title;
         const projectDescs = document.querySelectorAll(".project-content p");
         projectDescs[0].textContent = translations[lang].project1Desc;
         projectDescs[1].textContent = translations[lang].project2Desc;
         projectDescs[2].textContent = translations[lang].project3Desc;
         projectDescs[3].textContent = translations[lang].project4Desc;
         projectDescs[4].textContent = translations[lang].project5Desc;
+        projectDescs[5].textContent = translations[lang].project6Desc;
         const projectLinks = document.querySelectorAll(".project-link");
         projectLinks.forEach(link => {
             const text = link.textContent.toLowerCase();
